# Laptop_price_predictor

./: README.md  pyproject.toml  requirements.txt
src/data/processed/: cleaned_laptop_data.csv  laptop_data_cleaned.csv
src/notebooks/data_releated/: data_exploration.ipynb  data_preprocessing_and_cleaning.ipynb
src/notebooks/model_releated/: model.ipynb
src/utils/: helper.py
